Added purchase page styling and made all-time leaderboard tab default on leaderboards

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -90,7 +90,8 @@ body {
         }
     }
 
-    &.refer-page--mobile {
+    &.refer-page--mobile,
+    &.purchase-page--mobile  {
         .mobile-container {
             height: calc(100vh - 110px);
         }
