--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -86,6 +86,57 @@
     }
 }
 
+.intemediary-title {
+    margin: 0 0 5px;
+    font-size: $xl;
+    font-weight: 500;
+    color: $dark-gray;
+}
+
+.intermediary-desc {
+    margin: 0;
+    font-size: $md;
+    font-weight: 400;
+    line-height: 1.3;
+    color: $charcoal;
+    text-align: center;
+}
+
+.game-image--unlock {
+    margin-bottom: 30px;
+    border-radius: 5px;
+}
+
+.new_purchase {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.purchase-page--mobile {
+    .purchase-page__wrap {
+        @include vertical-align;
+        margin: 0 auto;
+        width: 85%;
+    }
+    .form-input--wrap {
+        margin-top: 20px;
+    }
+}
+
+.purchase-page {
+    .purchase-page__wrap {
+        max-width: 900px;
+        margin: 5vh auto 0;
+    }
+    .game-image--unlock {
+        width: 50%;
+    }
+    .form-input--wrap {
+        width: 50%;
+        margin: 20px auto 0;
+    }
+}
+
 @media (min-width: 668px) {
     .game-page__icon {
         height: 100px;
