--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -13,21 +13,23 @@
                     <div class="game__info">
                         <h1 class="game__title"><%= g.name %></h1>
                         <span class="credits">Earn Credits</span>
-                        <img class="game__leaderboard" src="/assets/leaderboard_button.png">
                     </div>
 
                 </div> <!--/ .game-wrapper -->
             <% end %>
             <% else %>
                 <%= link_to unlock_game_path(g.slug) do %>
-                    <div class="game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>">
+                    <div class="game-wrapper--locked game-wrapper game--<%= g.slug %> js-game--<%= g.slug %>">
 
-                        <%= image_tag(g.desktop_image, :class=>'game-image') %>
+                        <div class="game-img-wrap">
+                            <%= image_tag(g.desktop_image, :class=>'game-image') %>
+                            <img src="/assets/locked.png" class="locks">
+                        </div><!-- /.game-img-wrap -->
 
                         <div class="game__info">
                             <h1 class="game__title"><%= g.name %></h1>
-                            <span class="credits">Unlock Game</span>
-                            <img class="game__leaderboard" src="/assets/leaderboard_button.png">
+                            <span class="credits">Unlock Game:</span>
+                            <span class="game__cost"><%= g.credit_cost %> credits</span>
                         </div>
 
                     </div> <!--/ .game-wrapper -->
