--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -9,9 +9,10 @@
 <section class="leaderboard-nav">
     <h1 class="leaderboard__title leaderboard__title--headline"><%= @game.name %></h1>
 
-    <div id="leaderboard__cat--0" class="js-leaderboard__cat leaderboard__cat">
-        <h2 class="tab-control__title js-tab--cat ga-tab--myfriends active" data-tab-cat=".leaderboard--my-friends">My Friends</h2>
-        <h2 class="tab-control__title js-tab--cat ga-tab--alltime" data-tab-cat=".leaderboard--all-time">All-Time</h2>
+    <!-- Fix: change id of leaderboard__cat => .leaderboard__cat--1  -->
+    <div id="leaderboard__cat--1" class="js-leaderboard__cat leaderboard__cat">
+        <h2 class="tab-control__title js-tab--cat ga-tab--myfriends" data-tab-cat=".leaderboard--my-friends">My Friends</h2> <!-- Fix: add class .active  -->
+        <h2 class="tab-control__title js-tab--cat ga-tab--alltime active" data-tab-cat=".leaderboard--all-time">All-Time</h2>
         <h2 class="tab-control__title js-tab--cat ga-tab--weekly" data-tab-cat=".leaderboard--weekly" >Weekly</h2>
     </div>
 </section>
@@ -88,9 +89,9 @@
     </div><!-- /.leaderboard-diff --> <!-- end of ttrc conditional -->
 <% else %> <!--  ********************* Normal Leaderboard *********************  -->
     <section class="game-leaderboard">
-        <%= render 'games/leaderboard_friends_row' %>
+        <%= render 'games/leaderboard_friends_row' %> <!-- Fix: add class .active  -->
 
-        <div class="tab-section js-tab-section leaderboard leaderboard--all-time <% if current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
+        <div class="tab-section js-tab-section leaderboard leaderboard--all-time active <% if current_user_record({slug:@game.slug,timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
             <%= render 'games/leaderboard_row', leaderboard_type: "alltime" %>
 
             <%= render 'games/leaderboard_current_user_row', leaderboard_type: "alltime" %>
