removed blurred background until clean up final, swapped gold runner thumbnail and reverted back to old survey list page

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -43,10 +43,10 @@ body {
 
     &.mobile-games-page {
         .mobile-container {
-            background-image: url("/assets/blurred-bg.jpg");
+            // background-image: url("/assets/blurred-bg.jpg");
             background-size: 100%;
-            background-repeat: no-repeat;
-            background-attachment: fixed;
+            // background-repeat: no-repeat;
+            // background-attachment: fixed;
         }
     }
 
