Added bottom margin to redeem page

--- a/app/assets/stylesheets/body.css.scss
+++ b/app/assets/stylesheets/body.css.scss
@@ -37,7 +37,8 @@ body {
     // Add padding to bottom of page
     &.leaderboard-index-page--mobile,
     &.mobile-games-page,
-    &.survey-page {
+    &.survey-page,
+    &.redeem-page--mobile {
         padding-bottom: 50px;
     }
 
