--- a/app/views/layouts/mobile_application.html.erb
+++ b/app/views/layouts/mobile_application.html.erb
@@ -130,7 +130,7 @@
         <% end %>
         <%= yield(:game_javascript) %>
     </head>
-    <body ondragstart="return false;" ondrop="return false;" id="<%= yield (:body_id) %>" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down','tap-color']).pluck(:id).include?(@game.id) %> mobile-header--hide <% end %>">
+    <body ondragstart="return false;" ondrop="return false;" id="<%= yield (:body_id) %>" class="<%= yield (:body_class) %> <% if @game && Game.where(slug:['traffic','flappy-pilot','fall-down','tap-color','gold-runner']).pluck(:id).include?(@game.id) %> mobile-header--hide <% end %>">
 
         <% flash.each do |key, value| %>
           <div class="alert alert-<%= key %>"><%= value %></div>
