adding travel survey

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -9,4 +9,6 @@
         <%= render 'survey_movie' %>
     <% when "oscars-survey" %>
         <%= render 'survey_oscars' %>        
+    <% when "travel-survey" %>
+        <%= render 'survey_four' %>               
 <% end %>
