Changed the media query to include iphone 6+
Breakpoint was causing login forms for iphone6+ devices to be squished

--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -97,7 +97,7 @@ button {
 .form-wrap {
     @include vertical-align(relative, 45vh);
 
-    @media (min-width: $iphone6) {
+    @media (min-width: 416px) {
         padding: 0 35%;
         @include vertical-align(relative, 40vh);
 
