--- a/app/views/games/games_leaderboard_new.html.erb
+++ b/app/views/games/games_leaderboard_new.html.erb
@@ -4,6 +4,7 @@
         <img src="/assets/wave1.png" class="wave wave--1">
         <img src="/assets/wave2.png" class="wave wave--2">
         <img src="/assets/wave3.png" class="wave wave--3">
+        <div class="list-page__upper-bar"></div>
         <p class="list-page__title">Leaderboards</p>
         <%# embedded_svg('svgs/wave.svg', :class => 'wave') %>
     </section><!-- /.list-page__upper -->
