Added background color to upper list element

--- a/app/assets/stylesheets/interior-update.css.scss
+++ b/app/assets/stylesheets/interior-update.css.scss
@@ -19,6 +19,7 @@
     position: fixed;
     width: 100%;
     top: 0px;
+    background-color: $lavender;
     background-image: url(/assets/background.jpg);
     background-position-y: 0;
     background-size: cover;
