trying to fix stick on leaderboards scroll

--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -45,7 +45,7 @@ $falldown-font: #FEE2C7;
 .game-leaderboard {
     position: relative;
     height: calc(100vh - 110px);
-    overflow: scroll;
+    // overflow: scroll;
     padding-top: 60px;
     padding-bottom: 92px;
 
