--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -29,9 +29,11 @@
 
 <!-- If game is tap the right color -->
 <% if @game.slug == 'tap-color' %>
+<section class="ttrc-leaderboard__container">
      <div class="js-leaderboard--easy js-leaderboard-diff leaderboard-diff active">
-        <h2 class="leaderboard-diff__title">Easy</h2>
         <section class="game-leaderboard">
+            <h2 class="leaderboard-diff__title">Easy</h2>
+
             <%= render 'games/leaderboard_friends_row', leaderboard_version: 1 %>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--all-time active <% if current_user_record({slug:@game.slug, version: 1, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
@@ -49,8 +51,9 @@
     </div><!-- /.leaderboard-diff -->
 
      <div class="js-leaderboard--medium js-leaderboard-diff leaderboard-diff">
-        <h2 class="leaderboard-diff__title">Medium</h2>
         <section class="game-leaderboard">
+            <h2 class="leaderboard-diff__title">Medium</h2>
+
             <%= render 'games/leaderboard_friends_row', leaderboard_version: 2 %>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--all-time active  <% if current_user_record({slug:@game.slug, version: 2, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
@@ -69,8 +72,9 @@
     </div><!-- /.leaderboard-diff -->
 
     <div class="js-leaderboard--hard js-leaderboard-diff leaderboard-diff">
-        <h2 class="leaderboard-diff__title">Hard</h2>
         <section class="game-leaderboard">
+            <h2 class="leaderboard-diff__title">Hard</h2>
+
             <%= render 'games/leaderboard_friends_row', leaderboard_version: 3 %>
 
             <div class="tab-section js-tab-section leaderboard leaderboard--all-time active  <% if current_user_record({slug:@game.slug, version: 3, timeframe:'alltime'})["rank"].to_i <= 10 %> leaderboard--omit-current <% end %>">
@@ -87,6 +91,8 @@
 
         </section>
     </div><!-- /.leaderboard-diff --> <!-- end of ttrc conditional -->
+</section><!-- /.ttrc-leaderboard__container -->
+
 <% else %> <!--  ********************* Normal Leaderboard *********************  -->
     <section class="game-leaderboard">
         <%= render 'games/leaderboard_friends_row' %> <!-- Fix: add class .active  -->
