added sms color for refer page

--- a/app/assets/stylesheets/social_btn.css.scss
+++ b/app/assets/stylesheets/social_btn.css.scss
@@ -31,4 +31,7 @@ html body {
         background-color: $lavender;
         @include bgColorAndHover($lavender);
     }
+    .social-btn--sms {
+        background-color: $msg-green;
+    }
 }
