--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -36,6 +36,7 @@ $charcoal: #727070;
 $purple-light: #aaa7df;
 $fb-blue: #448ccb;
 $tw-blue: #2ab5ee;
+$msg-green: #4edb66;
 $blue-steel: #a5b0bd;
 $clouds: #ecf0f1;
 $black: #000;
