--- a/app/views/static_pages/refer_mobile.html.erb
+++ b/app/views/static_pages/refer_mobile.html.erb
@@ -14,9 +14,9 @@
 
 
         <% if request.env["HTTP_USER_AGENT"].match(/iPhone OS 9/) || request.env["HTTP_USER_AGENT"].match(/iPad/) %>
-            <a href="sms:1234567890&body=Play%20free%20games.%20Earn%20Real%20Cash.%20Check%20out%20www.getluckee.com/invite/<%= current_user.referral %>" target="_top" class="social-btn social-btn--mail"><i class="fa fa-comment"></i></a>
+            <a href="sms:1234567890&body=Play%20free%20games.%20Earn%20Real%20Cash.%20Check%20out%20www.getluckee.com/invite/<%= current_user.referral %>" target="_top" class="social-btn social-btn--sms"><i class="fa fa-comment"></i></a>
         <% elsif request.env["HTTP_USER_AGENT"].match(/Android/) %>
-            <a href="sms:1234567890&body=Play%20free%20games.%20Earn%20Real%20Cash.%20Check%20out%20www.getluckee.com/invite/<%= current_user.referral %>" target="_top" class="social-btn social-btn--mail"><i class="fa fa-comment"></i></a>
+            <a href="sms:1234567890&body=Play%20free%20games.%20Earn%20Real%20Cash.%20Check%20out%20www.getluckee.com/invite/<%= current_user.referral %>" target="_top" class="social-btn social-btn--sms"><i class="fa fa-comment"></i></a>
         <% else %>
             <a href="mailto:someone@example.com?subject=Play%20free%20games.%20Earn%20real%20cash.&body=Play%20free%20games.%20Earn%20real%20cash.%20www.getluckee.com%2Finvite%2F<%= current_user.referral %>" target="_top" class="social-btn social-btn--mail"><i class="fa fa-envelope"></i></a>
         <% end %>
