--- a/app/views/static_pages/_social_share_mod.html.erb
+++ b/app/views/static_pages/_social_share_mod.html.erb
@@ -1,7 +1,7 @@
 <div class="social-share__wrap">
     <a href="https://www.facebook.com/dialog/feed?app_id=<%=ENV['FACEBOOK_KEY']%>&description=Check%20out%20Luckee%20and%20earn%20cash%20for%20playing%20free%20games&link=http%3A%2F%2Fwww.getluckee.com&name=Play%20free%20games.%20Earn%20real%20cash.&redirect_uri=<%=root_url%>" class="social-btn social-btn--fb"><i class="fa fa-facebook"></i></a>
 
-    <a href="https://twitter.com/intent/tweet?url=http%3A%2F%2Fonforb.es%2F1U1Xdnp&amp;text=But%20they%20should%20be%20looking%20one%20step%20further%20at%20mobile%20friendliness." target="_blank" class="social-btn social-btn--twitter"><i class="fa fa-twitter"></i></a>
+    <a href="https://twitter.com/intent/tweet?text=Play%20free%20games.%20Earn%20Real%20Cash.%20Check%20out%20www.getluckee.com/invite/<%= current_user.referral %>" target="_blank" class="social-btn social-btn--twitter"><i class="fa fa-twitter"></i></a>
 
     <% if request.env["HTTP_USER_AGENT"].match(/iPhone OS 9/) || request.env["HTTP_USER_AGENT"].match(/iPad/) %>
         <a href="sms:&body=Play%20free%20games.%20Earn%20Real%20Cash.%20Check%20out%20www.getluckee.com/invite/<%= current_user.referral %>" target="_top" class="social-btn social-btn--sms"><i class="fa fa-comment"></i></a>
