--- a/app/views/static_pages/country.html.erb
+++ b/app/views/static_pages/country.html.erb
@@ -1,2 +1,4 @@
-<h2>Sorry we are for US traffic only while in beta!</h2>
-<p> We will be opening more countries in the future, so please come back and check soon!</p>
+<p>Sorry we are for US traffic only while in beta!</p>
+
+<%= render 'static_pages/waitlist_form'%>
+
