added a title to refer page

--- a/app/assets/stylesheets/leaderboard.css.scss
+++ b/app/assets/stylesheets/leaderboard.css.scss
@@ -127,6 +127,11 @@ $falldown-font: #FEE2C7;
         color: $red;
     }
 }
+.social-share__header {
+    margin-bottom: 10px;
+    font-weight: 300;
+    font-size: $xxxl;
+}
 .leaderboard__subtitle {
     text-align: center;
     font-size: 12px;
