--- a/app/views/static_pages/home_mobile.html.erb
+++ b/app/views/static_pages/home_mobile.html.erb
@@ -6,7 +6,7 @@
     </div>
     <div class="welcome-box-m">Play free games. Earn real cash.</div>
 	  <%# render 'users/form_mobile'%>
-</div>
+</div><!-- /.sign-up -->
 <div class='mobile-home-footer'>
 </div><!-- /.mobile-home-footer -->
 <div class='home-bottom'>
@@ -22,6 +22,8 @@
 <div class="bottom-content__container js-bottom-content__container">
     <a href="/signup" class="btn--homepage"> Sign up </a>
     <a href="/signin" class="btn--homepage btn--no-fill"> Log in </a>
+
+    <h1 class="disclaimer--us-only disclaimer--us-only-home">*Currently available in the US only</h1>
 </div>
 
 
