--- a/app/views/users/_form_mobile.html.erb
+++ b/app/views/users/_form_mobile.html.erb
@@ -33,6 +33,8 @@
         <a href="/assets/luckee_privacy_policy.pdf"  target="_blank"  class='legal-link'>Privacy Policy</a>
         <a href="/assets/luckee_TOS.pdf"  target="_blank"  class='legal-link'>Terms of Service</a>
     </div>
+
+    <h1 class="disclaimer--us-only">*Currently available in the US only</h1>
 </div><!-- /.form-wrap -->
 
 <div class="form-wrap">
