--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -144,3 +144,39 @@
     }
 }
 
+// Waitlist
+body.waitlist-page {
+    background-color: $lavender;
+    padding: 0px;
+    margin: 0px;
+
+    .mobile-container {
+        background-color: $lavender;
+    }
+}
+
+.gradient-container {
+  width: 100%;
+  height: 100vh;
+  padding: 0px;
+  margin: 0px;
+}
+
+.brand-header {
+    z-index: 10;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    position: absolute;
+    top: 5vh;
+    width: 85%;
+    left: 0;
+    right: 0;
+    .top-title {
+        width: 200px;
+        margin-top: 0;
+    }
+    .welcome-box-m {
+        font-size: $md;
+    }
+}
