--- a/app/assets/stylesheets/forms.css.scss
+++ b/app/assets/stylesheets/forms.css.scss
@@ -241,12 +241,13 @@ button {
         background-color: rgba(236, 240, 241, 0.25);
         border: none;
         box-shadow: none;
-        padding: 10px;
+        padding: 0 15px;
         width: 100%;
         font-weight: 500;
         color: white;
         font-size: $sm;
-        max-height: 40px;
+        height: 45px;
+        max-height: 45px;
         -webkit-font-smoothing: antialiased;
 
         &::-webkit-input-placeholder {
@@ -264,10 +265,14 @@ button {
         &:-ms-input-placeholder {
            color: $white;
         }
+
+        & + input {
+            margin-top: 5px;
+        }
     }
 
     input[type="text"] {
-        width: calc(100% - 20px) !important;
+        width: calc(100% - 30px) !important;
     }
 
     input[type="submit"] {
@@ -277,6 +282,5 @@ button {
         color: rgba(236, 240, 241, 0.6);
         -webkit-font-smoothing: antialiased;
         text-shadow: none;
-        padding-top: 7px;
     }
 }
