--- a/app/assets/stylesheets/intermediates.css.scss
+++ b/app/assets/stylesheets/intermediates.css.scss
@@ -153,6 +153,16 @@ body.waitlist-page {
     .mobile-container {
         background-color: $lavender;
     }
+
+    .navigation {
+        display: none;
+    }
+
+    .form-wrap {
+        padding: 0 7.5%;
+        max-width: 900px;
+        margin: auto;
+    }
 }
 
 .gradient-container {
@@ -178,5 +188,58 @@ body.waitlist-page {
     }
     .welcome-box-m {
         font-size: $md;
+        color: $white;
+    }
+}
+
+.new_waitlist_user {
+    text-align: center;
+
+    .trans-input {
+        background-color: rgba(236, 240, 241, 0.25);
+        border: none;
+        box-shadow: none;
+        padding: 0 15px;
+        width: 100%;
+        font-weight: 500;
+        color: white;
+        font-size: $sm;
+        height: 45px !important;
+        max-height: 45px;
+        -webkit-font-smoothing: antialiased;
+
+        &::-webkit-input-placeholder {
+           color: $white;
+        }
+
+        &:-moz-placeholder { /* Firefox 18- */
+           color: $white;
+        }
+
+        &::-moz-placeholder {  /* Firefox 19+ */
+           color: $white;
+        }
+
+        &:-ms-input-placeholder {
+           color: $white;
+        }
+
+        & + input {
+            margin-top: 5px;
+        }
+
+        &.trans-input--submit {
+            background-color: transparent;
+            border: 2px solid rgba(236, 240, 241, 0.25);
+            border-radius: 4px;
+            color: rgba(236, 240, 241, 0.6);
+            text-shadow: none;
+        }
+
+        @media screen and (max-width: 1024px) {
+            &.trans-input--text {
+                width: calc(100% - 30px) !important;
+            }
+        }
     }
 }
