adding username to email

--- a/app/views/user_notifier/send_cash_out_email.html.erb
+++ b/app/views/user_notifier/send_cash_out_email.html.erb
@@ -2,6 +2,8 @@ Cash out!<br />
 
 User id: <%= @user.id %> <br />
 
+Username: <%= @user.name %> <br/>
+
 Credits: <%= @cash_out.credits %><br />
 
 Cash: <%= @cash_out.cash %><br />
