--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -1,5 +1,8 @@
 <% content_for :body_class, "desktop-games-page games-page" %>
 
+<% if show_ads %>
+    <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "2440491879"} %>
+<% end %>
 <h1 class="page__title">Play free games. Earn real cash.</h1>
 
 <div class='game-list-container'>
