--- a/app/views/games/leaderboard.html.erb
+++ b/app/views/games/leaderboard.html.erb
@@ -111,7 +111,9 @@
     </section><!-- /.game-leaderboard -->
 
 <% end %>
-
+<% if show_ads %>
+    <%= render partial: "/ad_units/ad_wide", :locals => {ad_slot: "6870691477"} %>
+<% end %>
 <script>
     // $(window).load(function(){
     //     $('.leaderboard-row--current-user').addClass('animate');
