Added mobile closed signups

--- a/app/views/static_pages/country.html.erb
+++ b/app/views/static_pages/country.html.erb
@@ -3,7 +3,7 @@
 <div class="gradient-container">
     <div class="brand-header">
         <div class="logo-wrapper">
-            <img src="/assets/white_luckee.png" class="top-title">
+            <%= link_to root_path do %><img src="/assets/white_luckee.png" class="top-title"></a> <% end %>
         </div>
         <div class="welcome-box-m">Play free games. Earn real cash.</div>
           <%# render 'users/form_mobile'%>
